# FigureViewer

./: .gitignore  README.md  environment.yaml  pyproject.toml
src/figureviewer/: __init__.py  __main__.py  app.py  browsing.py  cli.py  display_state.py  export_figures.py  figures.py  metadata.py  navigation.py  render.py  settings.py
src/figureviewer/keynav/: __init__.py  index.html  index.js
src/figureviewer/ui/: __init__.py  column_browser.py  export_controls.py  sidebar.py  viewport.py
